--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 MONGODB_URL=mongodb+srv://benngraham:4smI10a94mao2aNm@cluster0.i1w2f.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+PORT=4000
